# final_project_fpse

./: #tile.ml#  Readme.md  abstract.mli  dune-project
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000  runtest-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/.aliases/default/test/: all-00000000000000000000000000000000  runtest-00000000000000000000000000000000
_build/default/: #fan.mli#  Readme.md  bisect072331410.coverage  bisect455683356.coverage  bisect481958838.coverage  dune  fan.mli  game.mli  two_people_mahjong.dune-package  two_people_mahjong.install  two_people_mahjong.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/47e007fefa63695257b4d9874e3138b7/: dune__exe___ppx.cmo  (+1 more)
_build/default/src/: action.cma  action.cmxa  action.cmxs  action.ml  action.pp.ml  dune  game.cma  game.cmxa  game.cmxs  game.ml  game.pp.ml  player.cma  player.cmxa  player.cmxs  player.ml  player.pp.ml  terminal.ml  tile.cma  tile.cmxa  tile.cmxs  tile.ml  tile.pp.ml
_build/default/test/: bisect023641484.coverage  bisect043776152.coverage  bisect300822336.coverage  bisect580415652.coverage  bisect623776946.coverage  bisect634520811.coverage  bisect823256254.coverage  bisect869796723.coverage  bisect896245524.coverage  dune  oUnit-Assignment4 Test.cache  tests.ml
_coverage/: index.html
_coverage/src/: action.ml.html  game.ml.html  player.ml.html  tile.ml.html
src/: action.ml  dune  game.ml  player.ml  terminal.ml  tile.ml
test/: tests.ml
(+34 files in other folders)
